--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,20 @@
-flask==2.0.3
+blinker==1.9.0
+certifi==2025.4.26
+click==8.1.8
+colorama==0.4.6
+Flask==3.1.0
+interchange==2021.0.4
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+monotonic==1.6
+packaging==25.0
+pansi==2024.11.0
+pillow==11.2.1
 py2neo==2021.2.4
+Pygments==2.19.1
 python-dotenv==0.19.2
+pytz==2025.2
+six==1.17.0
+urllib3==2.4.0
+Werkzeug==3.1.3
