changing visual layout and updating requirements

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 ADMIN_USER=admin
 ADMIN_PASS=admin
 FLASK_SECRET=secret
+ADT=bolt://localhost:7687
+neo4j=neo4j
+password=Ashraya@12
+DATABASE=crimebusters
