--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,41 @@
 blinker==1.9.0
 certifi==2025.4.26
+charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
+filelock==3.18.0
 Flask==3.1.0
+Flask-Login==0.6.3
+idna==3.10
 interchange==2021.0.4
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 monotonic==1.6
+mpmath==1.3.0
+narwhals==1.37.1
+networkx==3.3
+numpy==2.2.5
 packaging==25.0
+pandas==2.2.3
 pansi==2024.11.0
 pillow==11.2.1
+plotly==6.0.1
+protobuf==6.30.2
+psutil==7.0.0
 py2neo==2021.2.4
 Pygments==2.19.1
+python-dateutil==2.9.0.post0
 python-dotenv==0.19.2
 pytz==2025.2
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+setuptools==70.2.0
 six==1.17.0
+sympy==1.13.3
+tqdm==4.67.1
+typing_extensions==4.13.2
+tzdata==2025.2
 urllib3==2.4.0
 Werkzeug==3.1.3
